hphp/hack/test/enum_atom/typing/atom_sugar_member_selection.php.exp
File "atom_sugar_member_selection.php", line 25, characters 3-17:
Unknown constant B in E (Typing[4394])
